--- a/src/assets/styles/sidebar.scss
+++ b/src/assets/styles/sidebar.scss
@@ -15,6 +15,8 @@
         width: 14.50rem;
         transition: width 1s;
         height: 100vh;
+        max-height: 100vh;
+        min-height: 284vh;
 
         .imglogo1 {
             width: 150px;
@@ -28,6 +30,8 @@
         width: 5rem;
         transition: width 1s;
         height: 100vh;
+        max-height: 100vh;
+        min-height: 284vh;
 
         .imglogo {}
 
