--- a/src/assets/styles/topbar.scss
+++ b/src/assets/styles/topbar.scss
@@ -78,6 +78,11 @@
 
     .dashbordAbout {
         border: 1px solid rgb(180, 180, 180);
+        background-image: url("./../IMAGE/hills.svg");
+        object-fit: contain;
+        background-repeat: no-repeat;
+        background-size: 101%;
+        background-position: bottom;
         border-radius: 8px;
         padding: 10px 20px;
         box-shadow: 0 0.125rem 0.5rem 0 rgb(47 43 61 / 35%);
