--- a/src/assets/styles/topbar.scss
+++ b/src/assets/styles/topbar.scss
@@ -95,7 +95,7 @@
 
         @media screen and (max-width: 1199px) {
             
-            width: calc(100vw - -90px);
+            width:96%;
           
         }
 
@@ -158,7 +158,7 @@
 
         @media screen and (max-width: 1199px) {
             
-            width: calc(100vw - -90px);
+            width:96%;
           
         }
 
