--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,20 +62,20 @@ body {
 }
 
 .scrollbtn {
-  position: sticky;
-  top: 75vh;
+  position: fixed;
+  top: 75%;
   z-index: 99999;
-  right: 20px;
+  right: 4%;
   height: 20px;
 
-  
-    --bg: hsl(190deg 20% 10%);
-    background: transparent;
-    font-size: 32px;
-    display: flex;
-    place-content: center;
-    flex-wrap: wrap;
-  
+
+  --bg: hsl(190deg 20% 10%);
+  background: transparent;
+  font-size: 32px;
+  display: flex;
+  place-content: center;
+  flex-wrap: wrap;
+
 
 
 
@@ -92,11 +92,11 @@ body {
     // box-shadow: 0px 2px 4px hsl(0 0% 0% / 25%);
     animation: border-angle-rotate 2s infinite linear;
     border: 0.5rem solid transparent;
-    position: relative;
+    position: absolute;
 
-   
 
-   
+
+
     &.c {
       border-radius: 100%;
       // background: radial-gradient(circle, var(--bg) 60%, transparent 60%);
@@ -152,6 +152,7 @@ body {
 
 
 }
+
 @property --border-angle {
   syntax: "<angle>";
   initial-value: 0deg;
