--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -120,6 +120,8 @@
 
 
     </div>
-
-
 </div>
+
+<div class="skills-Abilities">
+    <h1 class="color-white p-m-0">Skills & <span class="color-yellow">Abilities</span></h1>
+    </div>
