--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -9,7 +9,8 @@
             <div class="p-col-6 p-p-0">
                 <div class="p-pr-4 p-pt-0">
                     <h1>Every Day is a New Challenge</h1>
-                    <p>Adaptability: Thrives in fast-paced environments; embraces new challenges as  opportunities for growth.
+                    <p>Adaptability: Thrives in fast-paced environments; embraces new challenges as opportunities for
+                        growth.
                         Problem-Solving: Strong analytical skills with a focus on innovative solutions to complex
                         issues.
                     </p>
@@ -17,19 +18,19 @@
                     <p class="p-mt-3"> Communication: Excellent verbal and written communication skills; effective in
                         collaborating with diverse teams
                         Technical Skills: <strong> JAVA, Angular, HTML, CSS, SCSS, DESIGN SYSTEM, AWS,
-                        SPRING, SPRINGBOOT, JDBC, HIBERNATE .</strong>
+                            SPRING, SPRINGBOOT, JDBC, HIBERNATE .</strong>
                     </p>
                 </div>
                 <div class="p-d-flex p-jc-center">
-                    
-                    <div class="resumebtn"  >
+
+                    <div class="resumebtn">
                         <a href="/assets/Resume3.pdf" target="_blank" class="btn"><span>Resume</span>
-                          <i class="pi pi-angle-right"></i>
+                            <i class="pi pi-angle-right"></i>
                         </a>
-                      </div>
+                    </div>
                 </div>
 
-              
+
             </div>
 
 
@@ -124,4 +125,69 @@
 
 <div class="skills-Abilities">
     <h1 class="color-white p-m-0">Skills & <span class="color-yellow">Abilities</span></h1>
+
+
+    <div class="p-d-flex p-flex-wrap p-jc-between">
+        <div class="skills-atContant">
+            <div>
+                <img src="../../../assets/SkillsImage/java.webp" alt="">
+                <h2>java</h2>
+            </div>
+        </div>
+        <div class="skills-atContant">
+            <div>
+                <img src="../../../assets/SkillsImage/DesignSystem.jpeg" alt="">
+                <h2>Design System</h2>
+            </div>
+        </div>
+        <div class="skills-atContant">
+            <div>
+                <img src="../../../assets/SkillsImage/Angular.jpeg" alt="">
+                <h2>Angular</h2>
+            </div>
+        </div>
+        <div class="skills-atContant">
+            <div>
+                <img src="../../../assets/SkillsImage/AWS.avif" alt="">
+                <h2>AWS</h2>
+            </div>
+        </div>
+       
+        <div class="skills-atContant">
+            <div>
+                <img src="../../../assets/SkillsImage/primeng.png" alt="">
+                <h2>PrimeNg</h2>
+            </div>
+        </div>
+        <div class="skills-atContant">
+            <div>
+                <img src="../../../assets/SkillsImage/bootstrap.jpeg" alt="">
+                <h2>Boot Strap</h2>
+            </div>
+        </div>
+        <div class="skills-atContant">
+            <div>
+                <img src="../../../assets/SkillsImage/git.jpeg" alt="">
+                <h2>Git</h2>
+            </div>
+        </div>
+        <div class="skills-atContant">
+            <div>
+                <img src="../../../assets/SkillsImage/javascript.png" alt="">
+                <h2>java Script</h2>
+            </div>
+        </div>
+        <div class="skills-atContant">
+            <div>
+                <img src="../../../assets/SkillsImage/oracle.jpeg" alt="">
+                <h2>Oracle</h2>
+            </div>
+        </div>
+        <div class="skills-atContant">
+            <div>
+                <img src="../../../assets/SkillsImage/springboot.jpeg" alt="">
+                <h2>Spring Boot</h2>
+            </div>
+        </div>
     </div>
+</div>
