skills image on hover

--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -129,65 +129,65 @@
 
     <div class="p-d-flex p-flex-wrap p-jc-between">
         <div class="skills-atContant">
-            <div>
+            <div class="skillsLogo">
                 <img src="../../../assets/SkillsImage/java.webp" alt="">
-                <h2>java</h2>
             </div>
+            <h2>java</h2>
         </div>
         <div class="skills-atContant">
-            <div>
+            <div class="skillsLogo">
                 <img src="../../../assets/SkillsImage/DesignSystem.jpeg" alt="">
-                <h2>Design System</h2>
             </div>
+            <h2>Design System</h2>
         </div>
         <div class="skills-atContant">
-            <div>
+            <div class="skillsLogo">
                 <img src="../../../assets/SkillsImage/Angular.jpeg" alt="">
-                <h2>Angular</h2>
             </div>
+            <h2>Angular</h2>
         </div>
         <div class="skills-atContant">
-            <div>
+            <div class="skillsLogo">
                 <img src="../../../assets/SkillsImage/AWS.avif" alt="">
-                <h2>AWS</h2>
             </div>
+            <h2>AWS</h2>
         </div>
        
         <div class="skills-atContant">
-            <div>
+            <div class="skillsLogo">
                 <img src="../../../assets/SkillsImage/primeng.png" alt="">
-                <h2>PrimeNg</h2>
             </div>
+            <h2>PrimeNg</h2>
         </div>
         <div class="skills-atContant">
-            <div>
+            <div class="skillsLogo">
                 <img src="../../../assets/SkillsImage/bootstrap.jpeg" alt="">
-                <h2>Boot Strap</h2>
             </div>
+            <h2>Boot Strap</h2>
         </div>
         <div class="skills-atContant">
-            <div>
+            <div class="skillsLogo">
                 <img src="../../../assets/SkillsImage/git.jpeg" alt="">
-                <h2>Git</h2>
             </div>
+            <h2>Git</h2>
         </div>
         <div class="skills-atContant">
-            <div>
+            <div class="skillsLogo">
                 <img src="../../../assets/SkillsImage/javascript.png" alt="">
-                <h2>java Script</h2>
             </div>
+            <h2>java Script</h2>
         </div>
         <div class="skills-atContant">
-            <div>
+            <div class="skillsLogo">
                 <img src="../../../assets/SkillsImage/oracle.jpeg" alt="">
-                <h2>Oracle</h2>
             </div>
+            <h2>Oracle</h2>
         </div>
         <div class="skills-atContant">
-            <div>
+            <div class="skillsLogo">
                 <img src="../../../assets/SkillsImage/springboot.jpeg" alt="">
-                <h2>Spring Boot</h2>
             </div>
+            <h2>Spring Boot</h2>
         </div>
     </div>
 </div>
