--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
 
         <app-topbar id="topbar"></app-topbar>
         <app-skills id="skills"></app-skills>
+        <app-educations id="education"></app-educations>
 
         <!-- <a  class="scrollbtn" (click)="smoothScrollTo('topbar')">Scroll to Top</a> -->
 
