--- a/src/assets/styles/education.scss
+++ b/src/assets/styles/education.scss
@@ -9,7 +9,7 @@
     padding: 10px 20px;
     box-shadow: 0 0.125rem 0.5rem 0 rgba(47, 43, 61, 0.35);
     flex-wrap: wrap;
-    width: calc(100vw - 140px);
+    width: 98%;
 
     .educationheader {
         display: flex;
