--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@
         <app-topbar id="topbar"></app-topbar>
         <app-skills id="skills"></app-skills>
         <app-educations id="education"></app-educations>
+        <app-experience id="experience"></app-experience>
 
         <!-- <a  class="scrollbtn" (click)="smoothScrollTo('topbar')">Scroll to Top</a> -->
 
