--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @import "./assets/styles/topbar.scss";
 @import "./assets/styles/skills.scss";
 @import "./assets/styles/education.scss";
+@import "./assets/styles/experience.scss";
 
 
 
